--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -15,5 +15,7 @@ jobs:
         python-version: "3.6"
     - name: 
       run: |
-        git diff $GITHUB_BASE_REF...$GITHUB_SHA
+        BASE_COMMIT=`git rev-parse --verify $GITHUB_BASE_REF`
+        CURRENT_COMMIT=$GITHUB_SHA
+        git diff $BASE_COMMIT...$CURRENT_COMMIT
         
