--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -15,6 +15,8 @@ jobs:
         python-version: "3.6"
     - name: 
       run: |
+        git branch -vv
+        git show-ref --head 
         echo "GITHUB_BASE_REF=$GITHUB_BASE_REF"
         BASE_COMMIT=`git rev-parse --verify $GITHUB_BASE_REF`
         CURRENT_COMMIT=$GITHUB_SHA
