--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -22,8 +22,13 @@ jobs:
         echo "GITHUB_BASE_REF=$GITHUB_BASE_REF"
         BASE_COMMIT=`git rev-parse --verify origin/$GITHUB_BASE_REF`
         echo "Base commit = $BASE_COMMIT"
+        echo "GITHUB_SHA = ${{ github.sha }}"
+        echo "PR_HEAD_SHA = ${{ github.event.pull_request.head.sha }}"
         
         # CURRENT_COMMIT=$GITHUB_SHA
+        git diff ${BASE_COMMIT}...${GITHUB_SHA}
+
+        # actual commit in pr branch
         CURRENT_COMMIT=${{ github.event.pull_request.head.sha }}
         git diff ${BASE_COMMIT}...${CURRENT_COMMIT}
         
