--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -18,6 +18,7 @@ jobs:
         git remote -vv
         git branch -vv
         git fetch origin $GITHUB_BASE_REF
+        git fetch
         git show-ref --head
         echo "GITHUB_BASE_REF=$GITHUB_BASE_REF"
         BASE_COMMIT=`git rev-parse --verify origin/$GITHUB_BASE_REF`
