--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -28,6 +28,6 @@ jobs:
         
         # actual commit in pr branch
         CURRENT_COMMIT=${{ github.event.pull_request.head.sha }}
-        git diff --merge-base ${GITHUB_SHA} ${BASE_COMMIT}...${CURRENT_COMMIT}
+        git diff --merge-base ${GITHUB_SHA} ${BASE_COMMIT}..${CURRENT_COMMIT}
 
         
