--- a/.github/workflows/submit.yml
+++ b/.github/workflows/submit.yml
@@ -1,10 +1,12 @@
-name: Validate, Evaluate and Score locally
+name: Submit changes to remote luna ml server
 
 on:
-  pull_request:
+  push:
+    branches:
+      - main
 
 jobs:
-  luna-ml:
+  luna-ml-submit:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout latest code
@@ -13,10 +15,8 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: "3.6"
-    - name: Setup KIND (kubernetes in docker)
-      uses: engineerd/setup-kind@v0.5.0
-      with:
-        version: "v0.9.0"
     - uses: luna-ml/luna-action@main
       with:
         version: "main"
+        server: https://luna.staroid.com
+        access-token: ${{ secrets.LUNA_GH_ACCESS_TOKEN }}
